--- a/views/index.html
+++ b/views/index.html
@@ -8,14 +8,41 @@
   <div class="row">
     <div class="col-md-3">
       <img src="https://pbs.twimg.com/profile_images/2450268678/olxp11gnt09no2y2wpsh_normal.jpeg"><br>
-      <b>Your Name</b><br>
-      100 followers
+      <b>David Yang</b><br>
+      1,000,000,000 followers
     </div>
     <div class="col-md-9">
-    
+        {% if showForm %}
+        <form action="/tweets" method="POST">
+        {% if name %}
+          <h4> {{name}} says </h4>
+          <input name="name" value="{{name}}" type="hidden" id="name_field"/>
+        {% else %}
+          <label for="name_field">Name:</label>
+          <input name="name" type="text" id="name_field" />
+        {% endif %} 
+
+          <label for="text_field">Text:</label>
+          <input name="text" type="text" id="text_field" style="width: 350px;" />
+
+          <input type="submit" value="Submit" />
+        </form>
+    {% endif %}
+
+      <h2> All Tweets </h2>
       <!-- display tweets here -->
+
       {% for tweet in tweets %}
-        <li>{{tweet.text}}</li>
+        <li class = "tweetbox"> 
+          <img> 
+          <div class = "content">
+            <span class = "by">
+              <a href="/users/{{tweet.name}}">{{tweet.name}}</a> 
+            </span> <br>      
+              {{tweet.text}} <br>
+              <a href="/tweets/{{tweet.id}}" class = "by">Re-tweet</a>
+          </div>
+        </li>
       {% endfor %}
       
     </div>
