--- a/views/layout.html
+++ b/views/layout.html
@@ -89,9 +89,18 @@
 
     // When 'new_tweet' events are fired, do something with the packaged tweet
     socket.on('new_tweet', function (tweet) { 
-      console.log(tweet);
-      alert('Refreshing... check the console...');
-      
+      console.dir(tweet);
+      tweet = tweet[0];
+
+      var aChild = document.createElement("li");
+      var theHTMLWeWant = "<br><img> <div class = 'content'> <span class = 'by'> <a href='/users/"+tweet.name+"'>"+tweet.name+"</a> </span> <br> "+tweet.text+" <br> <a href='/tweets/"+tweet.id+"' class = 'by'>Re-tweet</a> </div>";
+      aChild.innerHTML =  theHTMLWeWant;
+      var listedTweets = document.getElementsByClassName("tweetbox");
+
+
+      listedTweets[listedTweets.length-1].appendChild(aChild);
+
+      alert('Refreshing... check the console...' + " " + tweet);
       // some logic to add the new tweet to the DOM…
     }); 
   </script>
